# TeamFinder

./: .gitignore  =0.4.0  App.tsx  README-desktop.md  README-mobile.md  README.md  capacitor.config.ts  constants.ts  index.css  index.html  metadata.json  package-lock.json  package.json  requirements-pylint-app.txt  setup.bat  setup.sh  types.ts  vite.config.ts
.claude/: settings.json  settings.local.json
android/app/: build.gradle
components/: CompatibilityBadge.tsx  Header.tsx  OnboardingTooltip.tsx  ProfilePreviewCard.tsx  ProfileSection.tsx  ProjectCard.tsx  ProjectDetails.tsx  ProjectFinder.tsx  RoleTag.tsx  SkillInput.tsx  Spinner.tsx  TeamExport.tsx  TeammateCard.tsx  TeammateFilters.tsx  TeammateResults.tsx
data/: mockProfiles.ts  skillDatabase.ts
database/: supabase-schema.sql
docs/: DOCUMENTATION.md  PULL_REQUESTS.md
pylint_app/: __init__.py  __main__.py  cli.py  runner.py
services/: geminiService.ts  teammateService.ts
src/: App.tsx  constants.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BookmarkButton.tsx  BookmarksList.tsx  CompareCheckbox.tsx  Confetti.tsx  DifficultyAssessment.tsx  Header.tsx  MessagingTemplate.tsx  ProfileSection.tsx  ProgressBar.tsx  ProjectCard.tsx  ProjectComparisonModal.tsx  ProjectDetails.tsx  ProjectFinder.tsx  SignIn.tsx  SkillConfidenceSelector.tsx  SkillGapAnalysis.tsx  SkillProficiencyEditor.tsx  SkillTag.tsx  TeamCompositionGuide.tsx  (+5 more)
tools/: build_exe.py  entry_point.py
(+25 files in other folders)
