[package]
name = "teamfinder"
version = "0.1.0"
description = "TeamFinder – Group Project Finder"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "teamfinder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                    = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs          = "2"
tauri-plugin-store       = "2"
tauri-plugin-dialog      = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener      = "2"
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1"
